samples/_failures_safe/1761462741_69efdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_704ad1bf.c: In function ‘main’:
./samples/SAFE/__tmp_704ad1bf.c:161:35: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  161 |                 if (add_matrices(&mat
      |                                   ^~~
      |                                   mat2
./samples/SAFE/__tmp_704ad1bf.c:161:35: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_704ad1bf.c:161:38: error: expected ‘)’ at end of input
  161 |                 if (add_matrices(&mat
      |                                 ~    ^
      |                                      )
./samples/SAFE/__tmp_704ad1bf.c:161:21: error: too few arguments to function ‘add_matrices’
  161 |                 if (add_matrices(&mat
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_704ad1bf.c:91:5: note: declared here
   91 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_704ad1bf.c:161:17: error: expected declaration or statement at end of input
  161 |                 if (add_matrices(&mat
      |                 ^~
./samples/SAFE/__tmp_704ad1bf.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_704ad1bf.c:161:17: error: expected declaration or statement at end of input
